syntax = "proto3";
package example;

option go_package = "github.com/fizx/grpc-viewer/example";

service ExampleService {
  rpc ExampleMethod1(ExampleRequest) returns (ExampleResponse) {}
  rpc ExampleMethod2(ExampleRequest) returns (ExampleResponse) {}
}

service AlternateService {
  rpc ExampleMethod(ExampleRequest) returns (ExampleResponse) {}
}

message SomeInnerMessage { string foo = 1; }

message SomeRecursiveMessage {
  string name = 1;
  repeated SomeRecursiveMessage recursiveValue = 2;
}

message ExampleRequest {
  repeated string name = 1;
  repeated SomeInnerMessage inner = 2;
  oneof someone {
    string to_love = 3;
    SomeInnerMessage inner_piece = 4;
  }
  SomeRecursiveMessage recursiveMessage = 5;
}

message ExampleResponse { string message = 1; }
